--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start -H 0.0.0.0",
     "lint": "eslint",
-    "postinstall": "cp node_modules/pdfjs-dist/legacy/build/pdf.worker.mjs public/pdf.worker.mjs"
+    "postinstall": "cp node_modules/pdfjs-dist/legacy/build/pdf.worker.min.mjs public/pdf.worker.min.mjs"
   },
   "dependencies": {
     "@base-ui/react": "^1.1.0",
